--- a/presentation/slides/standalone.adoc
+++ b/presentation/slides/standalone.adoc
@@ -7,8 +7,81 @@ image::images/standalone/module.png[]
 --
 [%step]
 --
+[.declarations]
+image::images/standalone/declarations.png[]
+--
+
+[%step]
+--
+[.exports]
+image::images/standalone/exports.png[]
+--
+
+
+[%step]
+--
+[.imports]
+image::images/standalone/imports.png[]
+--
+
+[%step]
+--
+[.providers]
+image::images/standalone/providers.png[]
+--
+
+[%step]
+--
+[.schemas]
+image::images/standalone/schemas.png[]
+--
+
+[%step]
+--
+[.autres]
+image::images/standalone/autres.png[]
+--
+
+[%step]
+--
 [.component]
 image::images/standalone/component.png[]
+--
+
+[%step]
+--
+[.selector]
+image::images/standalone/selector.png[]
+--
+
+[%step]
+--
+[.templateUrls]
+image::images/standalone/template-url.png[]
+--
+
+[%step]
+--
+[.styleUrls]
+image::images/standalone/style-urls.png[]
+--
+
+[%step]
+--
+[.changeDetection]
+image::images/standalone/change-detection.png[]
+--
+
+[%step]
+--
+[.encapsulation]
+image::images/standalone/encapsulation.png[]
+--
+
+[%step]
+--
+[.autres-component]
+image::images/standalone/autres.png[]
 --
 
 === !
@@ -19,16 +92,156 @@ image::images/standalone/fusion.png[]
 
 --
 [.module]
-image::images/standalone/component.png[]
+image::images/standalone/module.png[]
+--
+--
+[.declarations]
+image::images/standalone/declarations.png[]
+--
+--
+[.exports]
+image::images/standalone/exports.png[]
+--
+--
+[.imports]
+image::images/standalone/imports.png[]
+--
+--
+[.providers]
+image::images/standalone/providers.png[]
+--
+--
+[.schemas]
+image::images/standalone/schemas.png[]
+--
+--
+[.autres]
+image::images/standalone/autres.png[]
 --
 --
 [.component]
-image::images/standalone/module.png[]
+image::images/standalone/component.png[]
+--
+--
+[.selector]
+image::images/standalone/selector.png[]
+--
+--
+[.templateUrls]
+image::images/standalone/template-url.png[]
+--
+--
+[.styleUrls]
+image::images/standalone/style-urls.png[]
+--
+--
+[.changeDetection]
+image::images/standalone/change-detection.png[]
+--
+--
+[.encapsulation]
+image::images/standalone/encapsulation.png[]
+--
+--
+[.autres-component]
+image::images/standalone/autres.png[]
 --
 [%step]
 --
 [.standalone]
 image::images/standalone/standalone.png[]
+--
+
+[%step]
+--
+[.standalone-standalone]
+image::images/standalone/standalone-standalone.png[]
+--
+
+[%step]
+--
+[.declarations]
+image::images/standalone/delete-module.png[]
+[.exports]
+image::images/standalone/delete-module.png[]
+--
+
+[%step]
+--
+[.imports]
+image::images/standalone/delete-module.png[]
+[.imports-standalone]
+image::images/standalone/imports.png[]
+--
+
+[%step]
+--
+[.schemas]
+image::images/standalone/delete-module.png[]
+[.schemas-standalone]
+image::images/standalone/schemas.png[]
+--
+
+[%step]
+--
+[.providers]
+image::images/standalone/delete-module.png[]
+[.providers-standalone]
+image::images/standalone/providers.png[]
+--
+
+[%step]
+--
+[.autres]
+image::images/standalone/delete-module.png[]
+--
+
+[%step]
+--
+[.selector]
+image::images/standalone/delete-module.png[]
+[.selector-standalone]
+image::images/standalone/selector.png[]
+--
+
+[%step]
+--
+[.changeDetection]
+image::images/standalone/delete-module.png[]
+[.changeDetection-standalone]
+image::images/standalone/change-detection.png[]
+--
+
+[%step]
+--
+[.templateUrls]
+image::images/standalone/delete-module.png[]
+[.templateUrls-standalone]
+image::images/standalone/template-url.png[]
+--
+
+[%step]
+--
+[.encapsulation]
+image::images/standalone/delete-module.png[]
+[.encapsulation-standalone]
+image::images/standalone/encapsulation.png[]
+--
+
+[%step]
+--
+[.styleUrls]
+image::images/standalone/delete-module.png[]
+[.styleUrls-standalone]
+image::images/standalone/style-urls.png[]
+--
+
+[%step]
+--
+[.autres-component]
+image::images/standalone/delete-module.png[]
+[.autres-standalone]
+image::images/standalone/autres.png[]
 --
 
 === !
