changes angular history slide

--- a/presentation/index.adoc
+++ b/presentation/index.adoc
@@ -5,6 +5,7 @@
 :revealjs_theme: white
 :revealjs_history: true
 :customcss: custom.css
+:revealjs_width: 1280
 
 include::slides/cover.adoc[]
 include::slides/intro.adoc[]
