--- a/presentation/slides/cover.adoc
+++ b/presentation/slides/cover.adoc
@@ -1,4 +1,5 @@
-=== [.title]#Angular change de logo, mais pas que!#
+[.title]
+=== Angular change de logo,pass:q[<br>] mais pas que!
 
 image::./images/common/logo_angular_17.png[width=250, align=center]
 
