--- a/presentation/slides/standalone.adoc
+++ b/presentation/slides/standalone.adoc
@@ -273,16 +273,30 @@ export class LayoutComponent {}
 [.bootstrap-module]
 image::images/standalone/bootstrap-module.png[]
 --
+
+[%step]
+--
+[.app-module]
+image::images/standalone/app-module.png[]
+--
+
 [%step]
 --
 [.bootstrap-application]
 image::images/standalone/bootstrap-application.png[]
 --
 
-[NOTE.speaker]
+
+[%step]
 --
-* Définition du bootstraping d'angular.
-* Présentation de la méthode des nouveaux providers environment.
+[.app-component]
+image::images/standalone/app-component.png[]
+--
+
+[%step]
+--
+[.app-config]
+image::images/standalone/app-config.png[]
 --
 
 
