improves race display

--- a/presentation/slides/zoneless.adoc
+++ b/presentation/slides/zoneless.adoc
@@ -13,7 +13,7 @@ image::images/zoneless/meme-zonejs.jpg[]
 [%step.list]
 * Signal
 * PipeAsync
-* ViewContainer add/remove
+* ViewContainer
 * input
 * markForCheck
 
