merges onepoint slides, fixes alignements

--- a/presentation/slides/cover.adoc
+++ b/presentation/slides/cover.adoc
@@ -36,22 +36,17 @@ image::./images/florian_allainmat.jpg[]
 
 === !
 
-image::./images/onepoint.jpg[]
+image::./images/onepoint.jpg[background, size=cover]
+
+[.onepoint-ecole%step]
+--
+image::./images/ecole-onepoint.png[width=30%]
+Ecole Onepoint
+--
 
 [NOTE.speaker]
 --
 * Présentation de Onepoint très rapide
---
-
-=== !
-
-Ecole Onepoint
-
-image::./images/ecole-onepoint.png[width=30%]
-
-
-[NOTE.speaker]
---
 * Présentation de l'école Onepoint
 * Lien du Qrcode vers la formation Angular Onepoint
 --
