improve slides accessibility, ui adjustments

--- a/presentation/index.adoc
+++ b/presentation/index.adoc
@@ -1,5 +1,6 @@
 :source-highlighter: highlight.js
-:highlightjs-theme: atom-one-dark.css
+// :highlightjs-theme: atom-one-dark.css
+:highlightjs-theme: a11y-light.css
 :autofit-option:
 :icons: font
 :revealjs_theme: white
