--- a/presentation/slides/cover.adoc
+++ b/presentation/slides/cover.adoc
@@ -1,7 +1,12 @@
-[.title]
+[.cover.title]
 === Angular change de logo,pass:q[<br>] mais pas que!
 
 image::./images/common/logo_angular_17.png[width=250, align=center]
+
+[.cover-qrcode-game]
+--
+image::images/cover/qrcode-onepoint-game.svg[]
+--
 
 == !
 
