--- a/presentation/slides/signal.adoc
+++ b/presentation/slides/signal.adoc
@@ -99,9 +99,6 @@ image::images/signal/last1sub2child2a.png[]
 
 === [.sub_title]#Signal#
 
-[%step]
-RFC https://github.com/angular/angular/discussions/49685
-
 === !
 
 --
@@ -163,57 +160,41 @@ image::images/signal/sub2child2i.png[]
 image::images/signal/sub2child2a.png[]
 --
 
-=== [.sub_title]#Signal Writable#
-
-[%step.list]
-
-* Signal
+=== [.sub_title]#Writable Signal#
 
 === !
 
-[source,typescript, highlight="7"]
+[source,typescript, highlight="7|3"]
 ----
 @Component({
-  selector: 'app-root',
-  standalone: true,
-  templateUrl: './app.component.html',
+  template: `
+    <p>{{count()}}</p>
+  `,
 })
-export class AppComponent {
+export class WritableSignalComponent {
   count: WritableSignal<number> = signal(0);
 }
 ----
 
-=== !
-
-[source,html,linenums]
-----
-<p>{{count()}}</p>
-----
-
 === [.sub_title]#Signaux Read-only#
 
-[%step.list]
-
-* Computed
-* Effect
 
 [%auto-animate]
 === [.sub_title]#Computed#
 
-=== !
-
-[source,typescript,linenums, data-id=computed, highlight="8|9..10"]
+[source,typescript,linenums, data-id=computed, highlight="8|9..11|4"]
 ----
 ...
 @Component({
-  selector: 'app-root',
-  standalone: true,
-  templateUrl: './app.component.html',
+  template: `
+    <p>{{doubleCount()}}</p>
+  `,
 })
 export class AppComponent {
   count: WritableSignal<number> = signal(0);
-  doubleCount: Signal<number> = computed(() =>
-        this.count() * 2);
+  doubleCount: Signal<number> = computed(() => {
+    return this.count() * 2
+  });
 }
 ----
 
@@ -222,25 +203,13 @@ export class AppComponent {
 * Le computed est un signal qui dépend d'un autre signal.
 --
 
-=== !
-
-[source,html,linenums]
-----
-<p>{{doubleCount()}}</p>
-----
-
 [%auto-animate]
 === [.sub_title]#Effect#
 
-[%auto-animate]
-=== !
-
-[source,typescript, highlight="7|11|10..12"]
+[source,typescript, highlight="5|8..10"]
 ----
 @Component({
-  selector: 'app-root',
-  standalone: true,
-  templateUrl: './app.component.html',
+  template: ``,
 })
 export class AppComponent {
   count: WritableSignal<number> = signal(0);
@@ -253,65 +222,61 @@ export class AppComponent {
 }
 ----
 
-=== [.sub_title]#Rien de mieux que la pratique#
-
-[.control-flow-demo-image]
-
-image::images/common/demo.png[]
-
+[%auto-animate]
 === [.sub_title]#Preview Time#
+
 
 image::images/signal/slalom.gif[]
 
-
-=== !
-
-[%step.list]
-* Signal Input
-* Signal Model
-* Signal Queries
-
-=== [.sub_title]#ça donne quoi ?#
-
-[.control-flow-demo-image]
-image::images/common/demo.png[]
-
 [%auto-animate]
-=== [.sub_title]#Observable#
+=== [.sub_title]#Bindings#
 
-[%auto-animate]
-=== [.sub_title]#Observable#
-
-[%step.list]
-* toSignal()
-* toObservable()
-
-[%auto-animate]
-=== !
-[source,typescript,linenums,data-id=component, highlight="2|4..6"]
+[source,typescript,data-id=component, highlight="..|2|3,5"]
 ----
-export class TestService {
-  httpClient = inject(HttpClient);
-
-  get(date: string): Observable<Interface> {
-    return this.httpClient.get<Interface>(`url`);
+export class InputChildComponent {
+  disabled = input(false);
+  checked = model(false);
+  toggle() {
+    this.checked.set(!this.checked());
   }
 }
 ----
 
-=== !
-[source,typescript,linenums,data-id=component, highlight="5|1..2,7|1..2,9"]
+[source,html,hightlight]
 ----
-import {toSignal, toObservable} from
-"@angular/core/rxjs-interop";
+<app-input-child [disabled]="disabled()"
+                 [(checked)]="checked"></app-input-child>
+----
 
-export class TestComponent {
-    $test: Observable<number> = of(1)
+[%auto-animate]
+=== [.sub_title]#View & content queries#
 
-    test: Signal<number> = toSignal(this.$test);
-
-    $test2: Observable<number> = toObservable(this.test);
+[source,typescript,data-id=component, highlight="..|4,9|5,10"]
+----
+@Component({
+  imports: [RouterLink],
+  template: `
+    <div #map id="myMap"></div>
+    <ng-content></ng-content>
+  `
+})
+export class QueriesExampleComponent {
+  map = viewChild.required('map', { read: ElementRef });
+  links = contentChildren(RouterLink, { descendants: true });
 }
+----
+
+[%auto-animate]
+=== [.sub_title]#RxJS Interop#
+
+[%auto-animate]
+=== [.sub_title]#RxJS Interop#
+
+[source,typescript,data-id=component, highlight="1|3"]
+----
+const users = Signal<User[]> = toSignal(users$);
+
+const todoList$: Observable<Task[]> = toObservable(todoList);
 ----
 
 === !
