removes some slides

--- a/presentation/slides/control-flow.adoc
+++ b/presentation/slides/control-flow.adoc
@@ -74,6 +74,11 @@ RFC : https://github.com/angular/angular/discussions/50719
 }
 ----
 
+[%step,source,jsx,highlight]
+----
+@let
+----
+
 
 === [.sub_title]#Migration ?#
 
