--- a/presentation/slides/retire/standalone.adoc
+++ b/presentation/slides/retire/standalone.adoc
@@ -2,3 +2,38 @@
 
 [.control-flow-demo-image]
 image::images/common/demo.png[]
+
+
+
+=== [.sub_title]#Bootstrap Angular#
+
+[%step]
+--
+[.bootstrap-module]
+image::images/standalone/bootstrap-module.png[]
+--
+
+[%step]
+--
+[.app-module]
+image::images/standalone/app-module.png[]
+--
+
+[%step]
+--
+[.bootstrap-application]
+image::images/standalone/bootstrap-application.png[]
+--
+
+
+[%step]
+--
+[.app-component]
+image::images/standalone/app-component.png[]
+--
+
+[%step]
+--
+[.app-config]
+image::images/standalone/app-config.png[]
+--
